disabled/ciliumnetworkpolicy-aiostreams.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aiostreams
  namespace: aiostreams
spec:
  endpointSelector: {}
  ingress:
    # Allow from any pods in the cluster
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8888" # tinyproxy

    # Allow from Traefik to exposed port only
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "3000"
  egress:
    # Allow to the world
    - toEntities:
        - world

    # Allow to any pods in this namespace
    - toEndpoints:
        - {}

    # Allow to Kube DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"

    # Allow AIO to talk to comet
    - toEndpoints:
      - matchLabels:
          app.kubernetes.io/name: comet
          k8s:io.kubernetes.pod.namespace: comet  
      toPorts:
        - ports:
            - port: "8000"

    # Allow AIO to talk to mediafusion
    - toEndpoints:
      - matchLabels:
          app.kubernetes.io/name: mediafusion
          k8s:io.kubernetes.pod.namespace: mediafusion  
      toPorts:
        - ports:
            - port: "8000"

    # Allow AIO to talk to jackettio
    - toEndpoints:
      - matchLabels:
          app.kubernetes.io/name: jackettio
          k8s:io.kubernetes.pod.namespace: jackettio  
      toPorts:
        - ports:
            - port: "4000"        

    # Allow AIO to talk to easynewsplus
    - toEndpoints:
      - matchLabels:
          app.kubernetes.io/name: easynewsplus
          k8s:io.kubernetes.pod.namespace: easynewsplus  
      toPorts:
        - ports:
            - port: "1337"
